# goose

./: 404.html  ACP_HTTP_MIGRATION_PLAN.md  Cargo.toml  index.html
.github/workflows/: sync-from-upstream.yml
assets/js/: 0a45c249.8853d326.js  814f3328.086b5a52.js  main.9732bbbc.js  runtime~main.dc1e0aa5.js
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/adewale/: index.html
blog/authors/aharvard/: index.html
blog/authors/alex/: index.html
blog/authors/alexhancock/: index.html
blog/authors/alice/: index.html
blog/authors/angie/: index.html
blog/authors/clinton/: index.html
blog/authors/dalton/: index.html
blog/authors/damien/: index.html
blog/authors/dean/: index.html
blog/authors/ebony/: index.html
blog/authors/glenn/: index.html
blog/authors/harrison/: index.html
blog/authors/ian/: index.html
blog/authors/jeuston/: index.html
blog/authors/mic/: index.html
blog/authors/rarora/: index.html
blog/authors/rizel/: index.html
blog/authors/tania/: index.html
blog/authors/tomasz/: index.html
blog/authors/tyler/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/page/4/: index.html
blog/page/5/: index.html
blog/page/6/: index.html
blog/page/7/: index.html
blog/page/8/: index.html
blog/page/9/: index.html
community/: index.html
community/data/README/: index.html
crates/goose/: Cargo.toml
crates/goose-acp/: Cargo.toml
crates/goose-acp-client/: Cargo.toml
crates/goose-acp-client/src/: binary_store.rs  client.rs  lib.rs  paths.rs  provider.rs
crates/goose-acp-server/: Cargo.toml
crates/goose-acp-server/src/: server.rs
crates/goose-acp-server/tests/: common.rs  provider_test.rs  server_test.rs
crates/goose-acp/src/: http.rs  server.rs  server_factory.rs
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose/examples/: image_tool.rs
crates/goose/tests/: agent.rs  mcp_integration_test.rs  providers.rs
deeplink-generator/: index.html
docs/category/architecture-overview/: index.html
docs/category/getting-started/: index.html
docs/category/guides/: index.html
docs/category/mcp-servers/: index.html
docs/category/tutorials/: index.html
docs/experimental/: index.html
docs/experimental/goose-mobile/: index.html
docs/experimental/mobile-access/: index.html
docs/experimental/ollama/: index.html
docs/experimental/vs-code-extension/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/providers/: index.html
docs/getting-started/using-extensions/: index.html
docs/goose-architecture/: index.html
docs/goose-architecture/error-handling/: index.html
docs/goose-architecture/extensions-design/: index.html
docs/guides/acp-clients/: index.html
docs/guides/allowlist/: index.html
docs/guides/cli-providers/: index.html
docs/guides/codebase-analysis/: index.html
docs/guides/config-files/: index.html
docs/guides/context-engineering/: index.html
docs/guides/creating-plans/: index.html
docs/guides/enhanced-code-editing/: index.html
docs/guides/environment-variables/: index.html
docs/guides/logs/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
pr-preview/pr-6718/: 404.html  index.html  sitemap.xml
prompt-library/: index.html
prompt-library/detail/: index.html
prompt-library/types/: index.html
recipe-generator/: index.html
recipes/: index.html
recipes/detail/: index.html
recipes/types/: index.html
ui/acp-cli/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
ui/desktop/: openapi.json
(+956 files in other folders)
