[package]
name = "goose-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "goose-acp-server"
path = "src/bin/server.rs"

[lints]
workspace = true

[dependencies]
goose = { path = "../goose" }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
sacp = "10.1.0"
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.15", features = ["compat", "rt"] }
tracing = { workspace = true }
url = "2.5"
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
fs-err = "3"

# HTTP server dependencies
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4"] }
async-stream = "0.3.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
wiremock = { workspace = true }
tempfile = "3"
test-case = "3.3"
tower-http = { version = "0.6", features = ["cors", "fs", "auth"] }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
